Overrode "==" operator and hashcode for SmsMessage class. Change SmsMessage to extend List. So it can be easily searched.